fix intermittent overflow jitter #863 for avivator deckgl-wrapper (#953)

--- a/sites/avivator/src/index.css
+++ b/sites/avivator/src/index.css
@@ -12,3 +12,8 @@ body {
   color: red;
   margin: 15px;
 }
+
+/* this alleviates an intermittent issue with glitchy overflow oscillation */
+#deckgl-wrapper {
+  overflow: hidden;
+}
